# lw_oop_6

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
include/: bear.hpp  npc.hpp  orc.hpp  squirrel.hpp
src/: bear.cpp  npc.cpp  orc.cpp  squirrel.cpp
tests/: test.cpp
